--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
     "@types/node": "14.0.4",
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
-    "prettier": "^2.0.5",
+    "prettier": "2.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-scripts": "3.4.1",
@@ -20,7 +20,8 @@
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "format": "prettier \"**/*.{ts,tsx,css,graphql}\" --write"
   },
   "eslintConfig": {
     "extends": "react-app"
