--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
     "@types/node": "14.0.4",
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
+    "@types/styled-components": "5.1.0",
     "moment": "2.26.0",
     "prettier": "2.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
     "react-scripts": "3.4.1",
+    "styled-components": "5.1.1",
     "typescript": "3.9.3"
   },
   "scripts": {
