--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "dependencies": {
     "@material-ui/core": "4.10.0",
     "@material-ui/icons": "4.9.1",
-    "@testing-library/jest-dom": "5.8.0",
+    "@testing-library/jest-dom": "5.9.0",
     "@testing-library/react": "10.0.4",
     "@testing-library/user-event": "10.3.2",
     "@types/jest": "25.2.3",
@@ -13,6 +13,7 @@
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
     "@types/styled-components": "5.1.0",
+    "jest-fetch-mock": "3.0.3",
     "moment": "2.26.0",
     "prettier": "2.0.5",
     "react": "16.13.1",
