--- a/package.json
+++ b/package.json
@@ -12,12 +12,14 @@
     "@types/node": "14.0.4",
     "@types/react": "16.9.35",
     "@types/react-dom": "16.9.8",
+    "@types/react-router-dom": "5.1.5",
     "@types/styled-components": "5.1.0",
     "jest-fetch-mock": "3.0.3",
     "moment": "2.26.0",
     "prettier": "2.0.5",
     "react": "16.13.1",
     "react-dom": "16.13.1",
+    "react-router-dom": "5.2.0",
     "react-scripts": "3.4.1",
     "styled-components": "5.1.1",
     "typescript": "3.9.3"
