--- a/package.json
+++ b/package.json
@@ -3,6 +3,7 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@apollo/react-hooks": "3.1.5",
     "@material-ui/core": "4.10.0",
     "@material-ui/icons": "4.9.1",
     "@testing-library/jest-dom": "5.9.0",
@@ -15,6 +16,12 @@
     "@types/react-dom": "16.9.8",
     "@types/react-router-dom": "5.1.5",
     "@types/styled-components": "5.1.0",
+    "apollo-cache-inmemory": "1.6.6",
+    "apollo-client": "2.6.10",
+    "apollo-link": "1.2.14",
+    "apollo-link-http": "1.5.17",
+    "graphql": "15.0.0",
+    "graphql-tag": "2.10.3",
     "history": "4.10.1",
     "jest-fetch-mock": "3.0.3",
     "moment": "2.26.0",
