--- a/package.json
+++ b/package.json
@@ -4,6 +4,10 @@
   "private": true,
   "dependencies": {
     "@apollo/react-hooks": "3.1.5",
+    "@graphql-codegen/add": "1.15.1",
+    "@graphql-codegen/typescript": "1.15.1",
+    "@graphql-codegen/typescript-operations": "1.15.1",
+    "@graphql-codegen/typescript-react-apollo": "1.15.1",
     "@material-ui/core": "4.10.0",
     "@material-ui/icons": "4.9.1",
     "@testing-library/jest-dom": "5.9.0",
@@ -39,7 +43,8 @@
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject",
-    "format": "prettier \"**/*.{ts,tsx,css,graphql}\" --write"
+    "format": "prettier \"**/*.{ts,tsx,css,graphql}\" --write",
+    "codegen": "graphql-codegen"
   },
   "eslintConfig": {
     "extends": "react-app"
@@ -55,5 +60,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@graphql-codegen/cli": "1.15.1"
   }
 }
